fixing conversion issues from html to pug

--- a/views/doodlPage.pug
+++ b/views/doodlPage.pug
@@ -16,7 +16,7 @@ section.container
     button#rectangle Rectangle
     button#circle Circle
     button#clear Clear
-    button#submit(onclick="document.location='gallery.html'") Submit
+    button#submit(onclick="document.location='gallery'") Submit
     devlabel#RGBVal RGBVal
   .myDoodl
     canvas#myDoodl
