--- a/views/index.pug
+++ b/views/index.pug
@@ -46,9 +46,9 @@ style.
 .header
   img(src='https://i.imgur.com/wPnHfNq.jpeg' alt='Doodl' style='width:360px;height:360px')
 .buttonPos
-  button#signin.button(onclick="document.location='login.html'") Sign In
+  button#signin.button(onclick="document.location='login'") Sign In
   .divider
-  button#register.button(onclick="document.location='register.html'") Register
+  button#register.button(onclick="document.location='register'") Register
   .divider
-  button#guest.button(onclick="document.location='doodlPage.html'") Continue As Guest
+  button#guest.button(onclick="document.location='doodlPage'") Continue As Guest
 style(style='background-color: #f67570;').
