--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -14,7 +14,7 @@
                 margin-top: 50px;
             }
         </style>
-        <div style="text-align: center";>
+        <div style="text-align: center">
             <h1>Gallery</h1>
         </div>
         <script src="main.js"></script>
