doodl main page html fix

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -9,7 +9,7 @@
     <body>
         <section class="container">
             <div id="toolbar">
-                <img src = "doodlLogo.png", alt="Doodl", style="width:70px;height:70px">
+                <img src = "doodlLogo.png" alt="Doodl" style="width:70px;height:70px">
                 <label for="stroke">Colour</label>
                 <input id="stroke" name='stroke' type="color">
                 <label for="lineWidth">Line Width</label>
