routing update with .ejs extention

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,11 +51,11 @@
             <img src = "https://i.imgur.com/wPnHfNq.jpeg" alt="Doodl" style="width:360px;height:360px">
         </div>
         <div class="buttonPos">
-            <button id="signin" class="button" onclick="document.location='login.ejs'">Sign In</button>
+            <button id="signin" class="button" onclick="document.location='login'">Sign In</button>
                 <div class="divider"></div>
-            <button id="register" class="button" onclick="document.location='register.ejs'">Register</button>
+            <button id="register" class="button" onclick="document.location='register'">Register</button>
                 <div class="divider"></div>
-            <button id="guest" class="button" onclick="document.location='doodlPage.ejs'">Continue As Guest</button>
+            <button id="guest" class="button" onclick="document.location='doodlPage'">Continue As Guest</button>
         </div>
     </body>
     <body style="background-color: #f67570;"></body>
