--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -3,16 +3,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/public/stylesheets/style.css">
+        <link rel="stylesheet" href="../public/stylesheets/style.css">
         <title>Doodl</title>
     </head>
     <body>
         <div id="toolbar">
-            <img src = "doodlLogo.png" alt="Doodl" style="width:70px;height:70px">
+            <img src = "doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
             <label for="stroke">Colour</label>
-            <input id="stroke" name='stroke' type="color">
+            <input id="stroke" name='stroke' type="color"></input>
             <label for="lineWidth">Line Width</label>
-            <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100">
+            <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
             <button id="fill">Fill</button>
             <button id="line">Line</button>
             <button id="rectangle">Rectangle</button>
