trying to fix showing the image

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="toolbar">
-            <img src = "doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
+            <img src = "../public/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
             <label for="stroke">Colour</label>
             <input id="stroke" name='stroke' type="color"></input>
             <label for="lineWidth">Line Width</label>
