--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -25,6 +25,6 @@
         <div class="myDoodl">
             <canvas id="myDoodl"></canvas>
         </div>
-        
+        <script src="main.js"></script>
     </body>
 </html>
