trying to fix loading image

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../public/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
         <title>Doodl</title>
     </head>
     <body>
         <div id="toolbar">
-            <img src = "../public/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
+            <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
             <label for="stroke">Colour</label>
             <input id="stroke" name='stroke' type="color"></input>
             <label for="lineWidth">Line Width</label>
