--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -22,6 +22,9 @@
             <button id="submit" onclick="document.location='gallery'">Submit</button>
             <DevLabel id="RGBVal">RGBVal</DevLabel>
         </div>
+        <div class="myDoodl">
+            <canvas id="myDoodl"></canvas>
+        </div>
         <script src="main.js"></script>
     </body>
 </html>
