--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -8,23 +8,25 @@
         <title>Doodl</title>
     </head>
     <body>
-        <div id="toolbar">
-            <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
-            <label for="stroke">Colour</label>
-            <input id="stroke" name='stroke' type="color"></input>
-            <label for="lineWidth">Line Width</label>
-            <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
-            <button id="fill">Fill</button>
-            <button id="line">Line</button>
-            <button id="rectangle">Rectangle</button>
-            <button id="circle">Circle</button>
-            <button id="clear">Clear</button>
-            <button id="submit" onclick="document.location='gallery'">Submit</button>
-            <DevLabel id="RGBVal">RGBVal</DevLabel>
-        </div>
-        <div class="myDoodl">
-            <canvas id="myDoodl"></canvas>
-        </div>
+        <section class="container">
+            <div id="toolbar">
+                <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
+                <label for="stroke">Colour</label>
+                <input id="stroke" name='stroke' type="color"></input>
+                <label for="lineWidth">Line Width</label>
+                <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
+                <button id="fill">Fill</button>
+                <button id="line">Line</button>
+                <button id="rectangle">Rectangle</button>
+                <button id="circle">Circle</button>
+                <button id="clear">Clear</button>
+                <button id="submit" onclick="document.location='gallery'">Submit</button>
+                <DevLabel id="RGBVal">RGBVal</DevLabel>
+            </div>
+            <div class="myDoodl">
+                <canvas id="myDoodl"></canvas>
+            </div>
+        </section>
         <script src="/js/main.js"></script>
     </body>
 </html>
