--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -26,7 +26,7 @@
             <div class="myDoodl">
                 <canvas id="myDoodl"></canvas>
             </div>
-            <button id="settingsButton" onclick="openSettings()">
+            <button id="settingsButton" style="background: url(settings.png)" onclick="openSettings()">
                 Settings
             </button>
             <div id="settingsBG">
