--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
         }
         </style>
         <div class="header">
-            <img src = "https://i.imgur.com/wPnHfNq.jpeg" alt="Doodl" style="width:360px;height:360px"></img>
+            <img src = "/images/doodlLogo.png" alt="Doodl" style="width:360px;height:360px"></img>
         </div>
         <div class="buttonPos">
             <button id="signin" class="button" onclick="document.location='login'">Sign In</button>
