adding button for gdpr +change layout for register

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,7 +55,7 @@
                 <div class="divider"></div>
             <button id="login" class="button">Login</button>
         </div>
-        <script src="login.js"></script>
+        <script src="/js/login.js"></script>
     </body>
     <body style="background-color: #f67570;"></body>
 </html>
