--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,16 +48,24 @@
             height: 250;
         }
         </style>
-        <div class="buttonPos" id="userInput">
-            <form> User Name : <input type="text" name="UserName"> </form>
-                <div class="divider"></div>
-            <form> Password : <input type="text" name="Password"> </form>
-                <div class="divider"></div>
-            <form> Confirm Password : <input type="text" name="ConfirmPassword"> </form>
-                <div class="divider"></div>
-            <button id="register" class="button" >Register</button>
-        </div>
-        <script src="register.js"></script>
+       <div class="header">
+        <img src = "/images/doodlLogo.png" alt="Doodl" style="width:360px;height:360px"></img>
+    </div>
+    <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
+        <form> User Name : <input type="text" name="UserName"> </form>
+            <div class="divider"></div>
+        <form> Password : <input type="text" name="Password"> </form>
+            <div class="divider"></div>
+        <form> Confirm Password : <input type="text" name="ConfirmPassword"> </form>
+            <div class="divider"></div>
+            <div>
+                <input type="checkbox" id="privacy" name="privacy">
+                <label for="privacy">I have read and accept the </label>
+                <a target="_blank" href = "/gdprPage" >Privacy policy</a>
+              </div>
+        <button id="register" class="button" >Register</button>
+    </div>
+        <script src="/js/register.js"></script>
     </body>
     <body style="background-color: #f67570;"></body>
 </html>
