ejs id's added for register inputs

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,11 +52,11 @@
         <img src = "/images/doodlLogo.png" alt="Doodl" style="width:360px;height:360px"></img>
     </div>
     <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
-        <form> User Name : <input type="text" name="UserName"> </form>
+        <form> User Name : <input type="text" id="UserName"> </form>
             <div class="divider"></div>
-        <form> Password : <input type="text" name="Password"> </form>
+        <form> Password : <input type="text" id="Password"> </form>
             <div class="divider"></div>
-        <form> Confirm Password : <input type="text" name="ConfirmPassword"> </form>
+        <form> Confirm Password : <input type="text" id="ConfirmPassword"> </form>
             <div class="divider"></div>
             <div>
                 <input type="checkbox" id="privacy" name="privacy">
