increase margin between inputs

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,6 +47,10 @@
             align-items: center;
             height: 250;
         }
+        div{
+            margin-top: 7px;
+            margin-bottom: 7px;
+        }
         </style>
        <div class="header">
         <img src = "/images/doodlLogo.png" alt="Doodl" style="width:360px;height:360px"></img>
