email added to register, attempt to readto backend

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -54,6 +54,8 @@
     <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
         <form> User Name : <input type="text" id="UserName"> </form>
             <div class="divider"></div>
+        <form> Email : <input type="text" id="Email"> </form>
+            <div class="divider"></div>
         <form> Password : <input type="text" id="Password"> </form>
             <div class="divider"></div>
         <form> Confirm Password : <input type="text" id="ConfirmPassword"> </form>
