--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,45 +9,49 @@
     </head>
     <body>
         <style>
-        .header {
-            font-size: 50;
-            font-family: Trebuchet MS, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 300;
-        }
-        .button {
-            background-color: #1565c0;
-            border: none;
-            border-radius: 8px;
-            color: white;
-            padding: 12 28;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 20;
-            margin: 4 2;
-            cursor: pointer;
-            font-family: Trebuchet MS, sans-serif
-        }
-        .header img{
-            padding-top: 200;
-            width: 100%;
-            height: 100%;
-        }
-        .divider{
-            width:5;
-            height:5;
-            display:inline-block;
-        }
-        .buttonPos{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 250;
-        }
-        </style>
+            .header {
+                font-size: 50px;
+                font-family: Trebuchet MS, sans-serif;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 300px;
+            }
+            .button {
+                background-color: #1565c0;
+                border: none;
+                border-radius: 8px;
+                color: white;
+                padding: 12px 28px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 20px;
+                margin: 40px 20px;
+                cursor: pointer;
+                font-family: Trebuchet MS, sans-serif
+            }
+            .header img{
+                padding-top: 200px;
+                width: 100%;
+                height: 100%;
+            }
+            .divider{
+                width:5px;
+                height:5px;
+                display:inline-block;
+            }
+            .buttonPos{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 250px;
+            }
+            div{
+                margin-top: 7px;
+                margin-bottom: 7px;
+            }
+            </style>
         <div class="header">
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:360px;height:360px"></img>
         </div>
