--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,42 +10,42 @@
     <body>
         <style>
             .header {
-                font-size: 50;
+                font-size: 50px;
                 font-family: Trebuchet MS, sans-serif;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 300;
+                height: 300px;
             }
             .button {
                 background-color: #1565c0;
                 border: none;
                 border-radius: 8px;
                 color: white;
-                padding: 12 28;
+                padding: 12px 28px;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
-                font-size: 20;
-                margin: 4 2;
+                font-size: 20px;
+                margin: 40px 20px;
                 cursor: pointer;
                 font-family: Trebuchet MS, sans-serif
             }
             .header img{
-                padding-top: 200;
+                padding-top: 200px;
                 width: 100%;
                 height: 100%;
             }
             .divider{
-                width:5;
-                height:5;
+                width:5px;
+                height:5px;
                 display:inline-block;
             }
             .buttonPos{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 250;
+                height: 250px;
             }
             div{
                 margin-top: 7px;
