--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   height: 100%;
   overflow: hidden;
   color: white;
@@ -53,8 +53,8 @@ canvas{
 
 #settingsBG{
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
   background-color: rgba(0,0,0,0.7);
   width: 100%;
   height: 100%;
@@ -100,7 +100,7 @@ canvas{
   background-color: lightsteelblue;
   padding-top: 10px;
   padding-top: 10px;
-  margin-top: 0;
+  margin-top: 0px;
   border-bottom: 2px solid black;
 }
 
