--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -4,53 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/generic.css">
     </head>
     <body>
-        <style>
-            .header {
-                font-size: 50px;
-                font-family: Trebuchet MS, sans-serif;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 300px;
-            }
-            .button {
-                background-color: #1565c0;
-                border: none;
-                border-radius: 8px;
-                color: white;
-                padding: 12px 28px;
-                text-align: center;
-                text-decoration: none;
-                display: inline-block;
-                font-size: 20px;
-                margin: 40px 20px;
-                cursor: pointer;
-                font-family: Trebuchet MS, sans-serif
-            }
-            .header img{
-                padding-top: 200px;
-                width: 100%;
-                height: 100%;
-            }
-            .divider{
-                width:5px;
-                height:5px;
-                display:inline-block;
-            }
-            .buttonPos{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 250px;
-            }
-            div{
-                margin-top: 7px;
-                margin-bottom: 7px;
-            }
-            </style>
         <div style="text-align: center">
             <h1>Gallery</h1>
         </div>
