fixed button alignment

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         <div class="header">
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:360px;height:360px"></img>
         </div>
-        <div class="buttonPos" style="display: grid; text-align: right;">
+        <div class="buttonPos">
             <button id="signin" class="button" onclick="document.location='login'">Sign In</button>
                 <div class="divider"></div>
             <button id="register" class="button" onclick="document.location='register'">Register</button>
