--- a/views/voting.ejs
+++ b/views/voting.ejs
@@ -10,56 +10,6 @@
         <title>Doodl</title>
     </head>
     <body>
-        <style>
-        body{
-            margin: 10px;
-        }
-        button{
-            cursor: pointer;
-            outline: 0;
-            color: #AAA;
-            display:inline-block;
-            text-align:center;
-            margin:90px;
-        }
-        .btn:focus {
-            outline: none;
-        }
-        .green{
-            color: green;
-        }
-        .red{
-            color: red;
-        }
-        .header {
-            font-size: 50;
-            font-family: Trebuchet MS, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 300;
-        }
-        .header img{
-            padding-top: 200;
-            width: 100%;
-            height: 100%;
-        }
-        .divider{
-            width:5;
-            height:5;
-            display:inline-block;
-        }
-        .buttonPos{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 250;
-        }
-        div{    
-            align-items: center;
-            text-align: center;
-        }
-        </style>
         <div class="header">
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
         </div>
@@ -67,7 +17,7 @@
             <h3>What do you think of this image?</h3>
             <img src = "/images/test.png" alt="userImg" style="width:350px;height:350px"></img>
         </div>
-        <div><button class="btn" id="green"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true"></i></button>
+        <div style="text-align: center;"><button class="btn" id="green"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true"></i></button>
             <button class="btn" id="red"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true"></i></button>
         </div>
         
