--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -27,7 +27,7 @@
                 <canvas id="myDoodl"></canvas>
             </div>
             <button id="settingsButton" onclick="openSettings()">
-                <img src="/images/settings.png">
+               Settings
             </button>
             <div id="settingsBG">
                 <div id="settingsMain">
