--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,5 @@
             <button id="guest" class="button" onclick="document.location='doodlPage'">Continue As Guest</button>
         </div>
     </body>
-    <body></body>
+    <body style="background-color: #1565c0;"></body>
 </html>
