toggle switch test

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -39,6 +39,12 @@
                             X
                         </p>
                     </div>
+                    <div>
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </section>
