--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,9 @@ canvas{
   position: absolute;
   top: 10px;
   right: 0px;
+  background-color: white;
+  border: 0px;
+  cursor: pointer;
 }
 
 .switch {
