--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -41,7 +41,7 @@
                     </div>
                     <div>
                         <label class="switch">
-                            <input type="checkbox">
+                            <input type="checkbox" onclick="checked()">
                             <span class="slider round"></span>
                         </label>
                     </div>
@@ -54,6 +54,9 @@
                 settingsDiv.style.display = "block";
             }
             function closeSettings(){
+                settingsDiv.style.display = "none";
+            }
+            function checked(){
                 settingsDiv.style.display = "none";
             }
         </script>
