--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -41,7 +41,7 @@
                     </div>
                     <div>
                         <label class="switch">
-                            <input type="checkbox" onclick="checked()">
+                            <input type="checkbox" id="checked" onclick="checked()">
                             <span class="slider round"></span>
                         </label>
                     </div>
