--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
        <div class="header">
-        <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
+        <a href="index.ejs"><img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></a>
     </div>
     <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
         <form> User Name : <input type="text" id="UserName"> </form>
