--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,9 @@
     </head>
     <body>
                <div class="header">
-                <a href="/views/index.ejs"><img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></a>
+                <button id="doodlLogoButton" onclick="document.location='index'">
+                    <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
+                </button>
             </div>
         <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
             <form> User Name : <input type="text" name="UserName"> </form>
