--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -67,5 +67,7 @@
         .doodlLogoButton{
             width: 120px;
             height: 120px;
-            background-color: rgba(0,0,0,0);
+            background-color: transparent;
+            border: none !important;
+            font-size: 0;
         }
