--- a/views/voting.ejs
+++ b/views/voting.ejs
@@ -10,7 +10,7 @@
         <title>Doodl</title>
     </head>
     <body>
-        <div class="header">
+        <div class="header" style="height:120px">
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
         </div>
         <div class="buttonPos" id="userInput" style="display: grid;">
