Logo link check

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,10 +8,10 @@
         <title>Doodl</title>
     </head>
     <body>
-       <div class="header">
-        <button id="doodlLogoButton" onclick="document.location='index'">
-            <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
-        </button>
+    <div class="header">
+        <a href="document.location='index'">
+        <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
+        </a> 
     </div>
     <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
         <form> User Name : <input type="text" id="UserName"> </form>
@@ -27,7 +27,7 @@
                 <label for="privacy">I have read and accept the </label>
                 <a target="_blank" href = "/gdprPage" >Privacy policy</a>
               </div>
-        <button id="register" class="button" >Register</button>
+        <button id="register" class="button">Register</button>
     </div>
         <script src="/js/register.js"></script>
     </body>
