--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,10 +8,10 @@
         <title>Doodl</title>
     </head>
     <body>
-               <div class="header">
-                <button id="doodlLogoButton" onclick="document.location='index'">
+            <div class="header">
+                <a href="document.location='index'">
                     <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
-                </button>
+                </a> 
             </div>
         <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
             <form> User Name : <input type="text" name="UserName"> </form>
