--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
             <div class="header">
-                <a href="document.location='index'">
+                <a href="/">
                     <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
                 </a> 
             </div>
