added time frame for user data storage

--- a/views/gdprPage.ejs
+++ b/views/gdprPage.ejs
@@ -143,7 +143,7 @@ in any other places where the parties involved in the processing are located.</s
 12.0pt;margin-left:0cm;line-height:normal'><span style='font-size:12.0pt;
 font-family:"Arial",sans-serif;color:black;background:white'>The group will
 retain your personal data only for as long as is necessary for the purposes set
-out in this privacy policy. We will retain and use your personal data to the
+out in this privacy policy.If the user has been inactive for one year, then the user&apos;s personal data will be erased from our system.We will retain and use your personal data to the
 extent necessary to comply with our legal obligations (for example, if we are
 required to retain your data to comply with applicable laws), resolve disputes,
 and enforce our legal agreements and policies.</span></p>
@@ -152,9 +152,9 @@ and enforce our legal agreements and policies.</span></p>
 12.0pt;margin-left:0cm;line-height:normal'><span style='font-size:12.0pt;
 font-family:"Arial",sans-serif;color:black;background:white'>The group will
 also retain usage data for internal analysis purposes. Usage Data is generally
-retained for a shorter period of time, except when this data is used to
+retained for a shorter period of time (90 days), except when this data is used to
 strengthen the security or to improve the functionality of our service, or we
-are legally obligated to retain this data for longer time periods.</span></p>
+are legally obligated to retain this data for longer time periods (one year).</span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><u><span
 style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black;background:
@@ -491,7 +491,7 @@ style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Arial",sans-serif;color:black;background:
-white'>Email address: commissioner@gmail.com</span></p>
+white'>Email address: admin@doodl.games</span></p>
 
 <p class=MsoNormal>&nbsp;</p>
 
