--- a/public/stylesheets/generic.css
+++ b/public/stylesheets/generic.css
@@ -64,3 +64,10 @@
         .red{
             color: red;
         }
+        #reportbtn{
+            position:relative;
+            right: 100px;
+            top:100px;
+            width:50px;
+            height:50px
+        }
