--- a/views/voting.ejs
+++ b/views/voting.ejs
@@ -15,13 +15,18 @@
         </div>
         <div class="buttonPos" id="userInput" style="display: grid;">
             <h3>What do you think of this image?</h3>
-            <img src = "/images/test.png" alt="userImg" style="width:350px;height:350px"></img>
+            <div class="row" style ="display:flex; ">
+                <div class="column">
+                    <a href="/report"><img src = "/images/report.png" alt="report" id= "reportbtn" ></img></a>
+                </div>
+                <div class="column" >
+                    <img src = "/images/test.png" alt="userImg" style="width:350px;height:350px"></img>
+                </div>
+            </div>
         </div>
         <div style="text-align: center;"><button class="btn" id="green"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true"></i></button>
             <button class="btn" id="red"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true"></i></button>
         </div>
-        
-        
     </body>
     <body style="background-color: #f67570;"></body>
     <script src="/js/voting.js"></script>
