trying to add variable from routing into ejs file

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -22,6 +22,7 @@
                 <button id="clear">Clear</button>
                 <button id="submit" onclick="document.location='gallery'">Submit</button>
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
+                <h3> <%= testString %></h3>
             </div>
             <div class="myDoodl">
                 <canvas id="myDoodl"></canvas>
