--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         <title>Doodl</title>
     </head>
     <body>
+        <h3><%= testString %></h3>
         <div class="header">
             <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
         </div>
