--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -22,11 +22,11 @@
                 <button id="clear">Clear</button>
                 <button id="submit" onclick="document.location='gallery'">Submit</button>
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
-                <h3> <%= testString %></h3>
             </div>
             <div class="myDoodl">
                 <canvas id="myDoodl"></canvas>
             </div>
+            <div style="color:black; font: 30px Comic Sans MS; position:absolute; left:30%; top:5%"> Today's topic: <%= testString %></div>
             <button id="settingsButton" onclick="openSettings()">
                <img src="/images/settings.png" height="50px" width="50px">
             </button>
