--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -26,7 +26,7 @@
             <div class="myDoodl">
                 <canvas id="myDoodl"></canvas>
             </div>
-            <div style="color:black; font: 30px Comic Sans MS; position:absolute; left:30%; top:5%"> Today's topic: <%= testString %></div>
+            <div id="dailyWord"> Today's topic: <%= testString %></div>
             <button id="settingsButton" onclick="openSettings()">
                <img src="/images/settings.png" height="50px" width="50px">
             </button>
