--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,7 +108,7 @@ canvas{
   position: absolute;
   top: 10px;
   right: 0px;
-  background-color: white;
+  background-color: #f67570;
   border: 0px;
   cursor: pointer;
 }
