colour to background

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -8,8 +8,9 @@
     </head>
     <body>
         <div style="text-align: center">
-            <h1>Gallery</h1>
+            <h1>Today's Top Drawings</h1>
         </div>
         <script src="main.js"></script>
     </body>
+    <body style="background-color: #f67570;"></body>
 </html>
