--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -10,6 +10,36 @@
         <div style="text-align: center">
             <h1>Today's Top Drawings</h1>
         </div>
+        <table>
+            <tr>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+            </tr>
+            <tr>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+            </tr>
+            <tr>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+            </tr>
+            <tr>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+              <th><canvas></canvas></th>
+            </tr>
+          </table>
         <script src="main.js"></script>
     </body>
     <body style="background-color: #f67570;"></body>
