Testing submit button converts image to url

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -24,7 +24,7 @@
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
             </div>
             <div class="myDoodl">
-                <canvas id="myDoodl"></canvas>
+                <canvas id="myDoodlCanvas"></canvas>
             </div>
             <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
             <button id="settingsButton" onclick="openSettings()">
