--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -20,7 +20,7 @@
                 <button id="rectangle">Rectangle</button>
                 <button id="circle">Circle</button>
                 <button id="clear">Clear</button>
-                <button id="submit" onclick="document.location='gallery'">Submit</button>
+                <button id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
             </div>
             <div class="myDoodl">
