--- a/nodetest/views/register.ejs
+++ b/nodetest/views/register.ejs
@@ -14,7 +14,7 @@
       <p><%= messages.error %></p>
       <% } %>
       <form action="/register" method="POST">
-        <input type="name" name="name" placeholder="My Name" />
+        <input type="name" name="name" placeholder="Username" />
         <input
           type="email"
           name="email"
