--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/stylesheets/generic.css">
+        <link rel="stylesheet" href="../public/stylesheets/generic.css">
         <title>Doodl</title>
     </head>
     <body>
         <div class="header">
-            <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
+            <img src = "../public/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px"></img>
         </div>
         <div class="buttonPos">
             <button id="signin" class="button" onclick="document.location='login'">Sign In</button>
