fixed ejs files

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../public/stylesheets/generic.css">
+        <link rel="stylesheet" href="/stylesheets/generic.css">
         <title>Doodl</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
         <p><%= messages.error %></p>
         <% } %>
         <a href="/">
-        <img src = "../public/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
+        <img src = "/images/doodlLogo.png" alt="Doodl" style="width:120px;height:120px">
         </a> 
     </div>
     <div class="buttonPos" id="userInput" style="display: grid; text-align: right;">
@@ -42,7 +42,7 @@
             <button id="register" class="button">Register</button>
         </form>
     </div>
-        <script src="../public/js/register.js"></script>
+        <script src="/js/register.js"></script>
     </body>
     <body style="background-color: #f67570;"></body>
 </html>
