added guest page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
                 <div class="divider"></div>
             <button id="register" class="button" onclick="document.location='register'">Register</button>
                 <div class="divider"></div>
-            <button id="guest" class="button" onclick="document.location='doodlPage'">Continue As Guest</button>
+            <button id="guest" class="button" onclick="document.location='doodlPageGuest'">Continue As Guest</button>
         </div>
     </body>
     <body style="background-color: #f67570;"></body>
