--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -20,11 +20,13 @@
                 <button id="rectangle">Rectangle</button>
                 <button id="circle">Circle</button>
                 <button id="clear">Clear</button>
-                <button id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
+                <form action="/doodlPage" method="POST">
+                    <button id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
+                </form>
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
             </div>
             <div class="myDoodl">
-                <canvas id="myDoodlCanvas"></canvas>
+                    <canvas id="myDoodlCanvas"></canvas>
             </div>
             <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
             <button id="settingsButton" onclick="openSettings()">
