--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,11 +33,7 @@
        
         <form action="/register" method="POST">
             <input type="name" name="name" placeholder="Username" />
-            <input
-              type="email"
-              name="email"
-              placeholder="johnnythedesigner@gmail.com"
-            />
+            <input type="email" name="email" placeholder="johnnythedesigner@gmail.com"/>
             <input type="password" name="password" placeholder="* * * * * *" />
             <button id="register" class="button">Register</button>
         </form>
