--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -8,6 +8,7 @@
         <title>Doodl</title>
     </head>
     <body>
+        <h1>Hi <%= email%></h1>
         <section class="container">
             <div id="toolbar">
                 <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
