--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,9 @@
                 <div class="divider"></div>-->
             <form action="/login" method="POST">
                 <input type="email" name="email" placeholder="johndoe@gmail.com"/>
+                <div class="divider"></div>
                 <input type="password" name="password" placeholder="* * * * * *" />
+                <div class="divider"></div>
                 <button id="login" class="button">Login</button>
             </form>
             
