--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,8 +33,11 @@
        
         <form action="/register" method="POST">
             <input type="name" name="name" placeholder="Username" />
+            <div class="divider"></div>
             <input type="email" name="email" placeholder="johnnythedesigner@gmail.com"/>
+            <div class="divider"></div>
             <input type="password" name="password" placeholder="* * * * * *" />
+            <div class="divider"></div>
             <button id="register" class="button">Register</button>
         </form>
     </div>
