--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,9 +22,9 @@
             <form> Password : <input type="text" name="Password"> </form>
                 <div class="divider"></div>-->
             <form action="/login" method="POST">
-                <input type="email" name="email" placeholder="johndoe@gmail.com"/>
+                <input type="email" name="email" placeholder="johndoe@gmail.com"/><br>
                 <div class="divider"></div>
-                <input type="password" name="password" placeholder="* * * * * *" />
+                <input type="password" name="password" placeholder="* * * * * *" /><br>
                 <div class="divider"></div>
                 <button id="login" class="button">Login</button>
             </form>
