--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,11 +32,11 @@
               </div> -->
        
         <form action="/register" method="POST">
-            <input type="name" name="name" placeholder="Username" />
+            <input type="name" name="name" placeholder="Username" /><br>
             <div class="divider"></div>
-            <input type="email" name="email" placeholder="johnnythedesigner@gmail.com"/>
+            <input type="email" name="email" placeholder="johnnythedesigner@gmail.com"/><br>
             <div class="divider"></div>
-            <input type="password" name="password" placeholder="* * * * * *" />
+            <input type="password" name="password" placeholder="* * * * * *" /><br>
             <div class="divider"></div>
             <button id="register" class="button">Register</button>
         </form>
