--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,10 +22,8 @@
             <form> Password : <input type="text" name="Password"> </form>
                 <div class="divider"></div>-->
             <form action="/login" method="POST">
-                <input type="email" name="email" placeholder="johndoe@gmail.com" size="25" /><br>
-                <div class="divider"></div>
+                <input type="email" name="email" placeholder="johndoe@gmail.com" size="25" /><br><br>
                 <input type="password" name="password" placeholder="* * * * * *" size="25" /><br>
-                <div class="divider"></div>
                 <button id="login" class="button">Login</button>
             </form>
             
