--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,7 +33,7 @@
        
         <form action="/register" method="POST">
             <input type="name" name="name" placeholder="Username" size="25" /><br><br>
-            <input type="email" name="email" placeholder="johnnythedesigner@gmail.com" size="25" /><br><br>
+            <input type="email" name="email" placeholder="johndoer@gmail.com" size="25" /><br><br>
             <input type="password" name="password" placeholder="* * * * * *" size="25" pattern=".{6,}" title="Password must be at least 6 or more characters"/><br>
             <button id="register" class="button">Register</button>
         </form>
