--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -21,7 +21,7 @@
                 <button id="rectangle">Rectangle</button>
                 <button id="circle">Circle</button>
                 <button id="clear">Clear</button>
-                <input type="submit" id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
+                <input type="submit" id="submit" >Submit</input> <!--onclick="document.location='gallery'"-->
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
             </div>
             <div class="myDoodl">
