return to original ejs

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -8,7 +8,6 @@
         <title>Doodl</title>
     </head>
     <body>
-        <form action="/doodlPage" method="POST">
         <section class="container">
             <div id="toolbar">
                 <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
@@ -21,24 +20,12 @@
                 <button id="rectangle">Rectangle</button>
                 <button id="circle">Circle</button>
                 <button id="clear">Clear</button>
-                <input type="submit" id="submit" >Submit</input> <!--onclick="document.location='gallery'"-->
+                <form action="/doodlPage" method="POST">
+                    <button id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
+                </form>
                 <DevLabel id="RGBVal">RGBVal</DevLabel>
             </div>
             <div class="myDoodl">
-                    <canvas id="myDoodlCanvas"></canvas>
-            </div>
-            <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
-            <button id="settingsButton" onclick="openSettings()">
-               <img src="/images/settings.png" height="50px" width="50px">
-            </button>
-            <div id="settingsBG">
-                <div id="settingsMain">
-                    <p id="settingsTitle">
-                        Settings
-                    </p>
-                    <div id="closeSettings" title="Close Settings" onclick="closeSettings()">
-                        <p>
-                            X
                         </p>
                     </div>
                     <div>
@@ -63,6 +50,5 @@
             }
         </script>
         <script src="/js/main.js"></script>
-    </form>
     </body>
 </html>
