--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -8,49 +8,49 @@
         <title>Doodl</title>
     </head>
     <body>
-        <section class="container">
-            <div id="toolbar">
-                <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
-                <label for="stroke">Colour</label>
-                <input id="stroke" name='stroke' type="color"></input>
-                <label for="lineWidth">Line Width</label>
-                <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
-                <button id="fill">Fill</button>
-                <button id="line">Line</button>
-                <button id="rectangle">Rectangle</button>
-                <button id="circle">Circle</button>
-                <button id="clear">Clear</button>
-                <form action="/doodlPage" method="POST">
-                    <button id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
-                </form>
-                <DevLabel id="RGBVal">RGBVal</DevLabel>
-            </div>
-            <div class="myDoodl">
+        <form action="/doodlPage" method="POST">
+            <section class="container">
+                <div id="toolbar">
+                    <img src = "/images/doodlLogo.png" alt="Doodl" style="width:70px;height:70px"></img>
+                    <label for="stroke">Colour</label>
+                    <input id="stroke" name='stroke' type="color"></input>
+                    <label for="lineWidth">Line Width</label>
+                    <input id="lineWidth" name='lineWidth' type="number" value="5" min="1" max="100"></input>
+                    <button type="button" id="fill">Fill</button>
+                    <button type="button" id="line">Line</button>
+                    <button type="button" id="rectangle">Rectangle</button>
+                    <button type="button" id="circle">Circle</button>
+                    <button type="button" id="clear">Clear</button>
+                    <button type="submit" id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
+                    <DevLabel id="RGBVal">RGBVal</DevLabel>
+                </div>
+                <div class="myDoodl">
                     <canvas id="myDoodlCanvas"></canvas>
-            </div>
-            <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
-            <button id="settingsButton" onclick="openSettings()">
-               <img src="/images/settings.png" height="50px" width="50px">
-            </button>
-            <div id="settingsBG">
-                <div id="settingsMain">
-                    <p id="settingsTitle">
-                        Settings
-                    </p>
-                    <div id="closeSettings" title="Close Settings" onclick="closeSettings()">
-                        <p>
-                            X
+                </div>
+                <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
+                <button type="button" id="settingsButton" onclick="openSettings()">
+                    <img src="/images/settings.png" height="50px" width="50px">
+                </button>
+                <div id="settingsBG">
+                    <div id="settingsMain">
+                        <p id="settingsTitle">
+                            Settings
                         </p>
-                    </div>
-                    <div>
-                        <label class="switch">
-                            <input type="checkbox" id="checked" onclick="checked()">
-                            <span class="slider round"></span>
-                        </label>
+                        <div id="closeSettings" title="Close Settings" onclick="closeSettings()">
+                            <p>
+                                X
+                            </p>
+                        </div>
+                        <div>
+                            <label class="switch">
+                                <input type="checkbox" id="checked" onclick="checked()">
+                                <span class="slider round"></span>
+                            </label>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </form>
         <script type="text/javascript">
             var settingsDiv = document.getElementById("settingsBG");
             function openSettings(){
