--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -25,7 +25,7 @@
                     <DevLabel id="RGBVal">RGBVal</DevLabel>
                 </div>
                 <div class="myDoodl">
-                    <canvas id="myDoodlCanvas"></canvas>
+                        <canvas type="input" id="myDoodlCanvas"></canvas>
                 </div>
                 <div id="dailyWord"> Today's topic: <%= currentPrompt %></div>
                 <button type="button" id="settingsButton" onclick="openSettings()">
