changing hidden type to text

--- a/views/doodlPage.ejs
+++ b/views/doodlPage.ejs
@@ -22,7 +22,7 @@
                     <button type="button" id="circle">Circle</button>
                     <button type="button" id="clear">Clear</button>
                     <button type="submit" id="submit" >Submit</button> <!--onclick="document.location='gallery'"-->
-                    <input id="hiddenCanvasValue" type="hidden"></input>
+                    <input id="hiddenCanvasValue" name="hiddenCanvasValue" type="text"></input>
                     <DevLabel id="RGBVal">RGBVal</DevLabel>
                 </div>
                 <div class="myDoodl">
